Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@ openssl aes-256-ecb -d -in PAYLOAD -out PAYLOAD.zip -K %combined%
 
 </code></pre>
 
+<p>Running the batch file:
+<img src="http://irsgov.github.io/IDES-Data-Preparation-OpenSSL/images/image11.png" alt="Image 5">
+Figure 1</p>
+
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
 <h3>
