Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Ides-data-preparation-openssl : ">
+    <meta name="description" content="IDES Data Preparation - OpenSSL : Decrypting notifications received from IDES with OpenSSL">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Ides-data-preparation-openssl</title>
+    <title>IDES Data Preparation - OpenSSL</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/IRSgov/IDES-Data-Preparation-OpenSSL">View on GitHub</a>
 
-          <h1 id="project_title">Ides-data-preparation-openssl</h1>
-          <h2 id="project_tagline"></h2>
+          <h1 id="project_title">IDES Data Preparation - OpenSSL</h1>
+          <h2 id="project_tagline">Decrypting notifications received from IDES with OpenSSL</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/IRSgov/IDES-Data-Preparation-OpenSSL/zipball/master">Download this project as a .zip file</a>
@@ -94,7 +94,7 @@ Figure 1</p>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Ides-data-preparation-openssl maintained by <a href="https://github.com/IRSgov">IRSgov</a></p>
+        <p class="copyright">IDES Data Preparation - OpenSSL maintained by <a href="https://github.com/IRSgov">IRSgov</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
