Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -85,6 +85,29 @@ openssl aes-256-ecb -d -in PAYLOAD -out PAYLOAD.zip -K %combined%
 Figure 1</p>
 
 <h3>
+<a id="linux-shell-scripting" class="anchor" href="#linux-shell-scripting" aria-hidden="true"><span class="octicon octicon-link"></span></a>Linux Shell Scripting</h3>
+
+<p>Similar to the Windows method above, the following code should be placed into a shell script and run in the same folder as the openssl executable. </p>
+
+<p>The following files are required and the filename in the batch script will need to be replaced with your filename for each:
+KEYFILE - this is the Key file that will be in the downloaded notification .zip file
+PRIVATEKEY - this will be your private key that corresponds to the certificate that was uploaded into IDES
+PAYLOAD - this is the Payload file that will be in the downloaded notification .zip file</p>
+
+<pre><code>private_key=$1 #this will be your private key that corresponds to the certificate that was uploaded into IDES
+
+key_file=$2 #this is the Key file that will be in the downloaded notification .zip file 
+
+payload_file=$3 #this is the Payload file that will be in the downloaded notification .zip file
+
+output_file=$4 #this is the expected output filename
+
+hexvalue=`openssl rsautl -decrypt -hexdump -inkey $private_key_file -in $random_key_file|cut -c-55|cut -c7-55|tr -d "\n"|sed 's/[ -]//g'`;
+
+openssl enc -d -aes-256-ecb -in $payload_file -out $output_file -K $hexvalue
+</code></pre>
+
+<h3>
 <a id="manual-openssl-commands" class="anchor" href="#manual-openssl-commands" aria-hidden="true"><span class="octicon octicon-link"></span></a>Manual OpenSSL Commands</h3>
 
 <p>If you are having trouble with an automated method above, there are additional steps you can take to decrypt the AES key, manually get the required hex key data, and use it to decrypt the Payload file. </p>
